adjusted title slide, added thank you slide

--- a/slides/index.html
+++ b/slides/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>reveal.js</title>
+		<title>Angular and the ArcGIS API for JavaScript, DS2018</title>
 
 		<link rel="stylesheet" href="css/reveal.css">
 		<link rel="stylesheet" href="css/theme/esri-dev-summit-2018.css">
@@ -32,8 +32,27 @@
 			
 			<div class="slides">
 				<section data-background="img/bg-1.png" data-background-size="cover" style="padding-left: 80px;">
-					<h1 style="text-align: left; font-size: 80px;">Presentation Title</h1>
-					<p style="text-align: left; font-size: 30px; text-transform: uppercase;">Presenter Names</p>
+					<h1 style="text-align: left; font-size: 80px;">
+						Angular and the ArcGIS API for JavaScript
+					</h1>
+					<p style="text-align: left; display: flex; align-items: center">
+						<span style="text-transform: uppercase;">Andy Gup</span>
+						<a href="https://twitter.com/agup" target="_blank" style="font-size: 30px;">
+							<img src="img/Twitter_Logo_WhiteOnImage.png" width="40" style="border: none; vertical-align: middle; margin-left: 50px; margin-right: 10px;">@agup
+						</a>
+					</p>
+					<p style="text-align: left; display: flex; align-items: center">
+						<span style="text-transform: uppercase;">Sean Olson</span>
+						<a href="https://www.linkedin.com/in/seanolson-io/" target="_blank" style="font-size: 30px;">
+							<img src="img/In-White-121px-R.png" width="40" style="border: none; vertical-align: middle; margin-left: 50px; margin-right: 10px;">seanolson-io
+						</a>
+					</p>
+					<p style="text-align: left; display: flex; align-items: center">
+						<span style="text-transform: uppercase;">Jacob Wasilkowski</span>
+						<a href="https://twitter.com/JWasilGeo" target="_blank" style="font-size: 30px;">
+							<img src="img/Twitter_Logo_WhiteOnImage.png" width="40" style="border: none; vertical-align: middle; margin-left: 50px; margin-right: 10px;">@JWasilGeo
+						</a>
+					</p>
 				</section>
 				<section data-markdown data-background="img/bg-2.png">
 					<textarea data-template>
@@ -96,6 +115,30 @@
 				
 						* Bullet [points here](http://hakim.se).
 					</textarea>
+				</section>
+
+				<section data-background="img/bg-9.png" data-background-size="cover" style="padding-left: 28%;">
+					<h1 style="text-align: left; font-size: 80px;">
+						Thank you
+					</h1>
+					<p style="text-align: left; display: flex; align-items: center;">
+						<span style="text-transform: uppercase;">Andy Gup</span>
+						<a href="https://twitter.com/agup" target="_blank">
+							<img src="img/Twitter_Logo_WhiteOnImage.png" width="50" style="border: none; vertical-align: middle; margin-left: 50px; margin-right: 10px;">@agup
+						</a>
+					</p>
+					<p style="text-align: left; display: flex; align-items: center;">
+						<span style="text-transform: uppercase;">Sean Olson</span>
+						<a href="https://www.linkedin.com/in/seanolson-io/" target="_blank">
+							<img src="img/In-White-121px-R.png" width="50" style="border: none; vertical-align: middle; margin-left: 50px; margin-right: 10px;">seanolson-io
+						</a>
+					</p>
+					<p style="text-align: left; display: flex; align-items: center;">
+						<span style="text-transform: uppercase;">Jacob Wasilkowski</span>
+						<a href="https://twitter.com/JWasilGeo" target="_blank">
+							<img src="img/Twitter_Logo_WhiteOnImage.png" width="50" style="border: none; vertical-align: middle; margin-left: 50px; margin-right: 10px;">@JWasilGeo
+						</a>
+					</p>
 				</section>
 
 				<section data-markdown data-background="img/bg-final.jpg">
