esri-loader slides content update

--- a/slides/index.html
+++ b/slides/index.html
@@ -247,7 +247,7 @@
 
 					- Why?
 
-						&gt; The only reliable way to load ArcGIS API for JavaScript modules is using Dojo's AMD loader.
+						&gt; "The only reliable way to load ArcGIS API for JavaScript modules is using Dojo's AMD loader."
 
 					- You benefit from getting to:
 
