misc var name updates

--- a/slides/index.html
+++ b/slides/index.html
@@ -298,10 +298,10 @@
 						const map = new EsriMap({ /* zoom, center, etc. */ });
 
 						// with
-						const mapOptions: esri.MapProperties = {
+						const mapProperties: esri.MapProperties = {
 							basemap: 'streets'
 						};
-						const map: esri.Map = new EsriMap(mapOptions);
+						const map: esri.Map = new EsriMap(mapProperties);
 						```
 
 						```ts
