Stub sample 10 into reveal deck

--- a/slides/index.html
+++ b/slides/index.html
@@ -88,6 +88,7 @@
 
 					---
 
+
 					_Not "AngularJS", "Angular v1", "Angular.js", etc._
 
 					https://github.com/Esri/angular-esri-map
@@ -197,9 +198,11 @@
 
 			<section data-markdown data-background="img/bg-4.png">
 				<textarea data-template>
-					## 2-app-scaffolding
+					## 2-more-app-scaffolding
 			
-					- Bullet [points here](http://hakim.se).
+					- Extending the map component
+						- Pass data from parent to child map component with input binding
+						- Listen in parent for child map event
 				</textarea>
 			</section>
 
@@ -382,7 +385,9 @@
 				<textarea data-template>
 					## 10-ionic
 			
-					- Bullet [points here](http://hakim.se).
+					- Using the ArcGIS API for JavaScript with Ionic.
+					- Ionic is built on Angular
+					- Ionic life-cycle: async/await
 				</textarea>
 			</section>
 
