--- a/slides/index.html
+++ b/slides/index.html
@@ -88,7 +88,6 @@
 
 					---
 
-
 					_Not "AngularJS", "Angular v1", "Angular.js", etc._
 
 					https://github.com/Esri/angular-esri-map
@@ -405,25 +404,25 @@
 
 			<section data-markdown data-background="img/bg-5.png">
 				<textarea data-template>
-					## Where to get help: esri-loader
+					## Where to get help: Angular
 
-					- [README](https://github.com/Esri/esri-loader/blob/master/README.md)
-
-					- New Github issue?
-
-					  ![issue template screenshot](img/issue-template.png)
+					- Angular docs at https://angular.io/
+					
+					- Stack Overflow
+					
+					- Your own favorite places for web dev help
 				</textarea>
 			</section>
 
 			<section data-markdown data-background="img/bg-5.png">
 				<textarea data-template>
-					## Where to get help: Angular
+					## Where to get help: esri-loader
 
-					- Angular docs, Stack Overflow...
+					- The [README](https://github.com/Esri/esri-loader/blob/master/README.md) is phenomenal and up-to-date
+					- New Github issue? 
+						- must include a live demo that shows the specific problem with esri-loader
 
-					- ?
-
-					- ?
+					![issue template screenshot](img/issue-template.png)
 				</textarea>
 			</section>
 
@@ -437,9 +436,9 @@
 
 					- https://github.com/Esri/angular-cli-esri-map
 
-					- [Related presentations this week](#/presentations-this-week)
-
 					- ["Esri/esri-loader"](https://github.com/Esri/esri-loader) is your new friend
+
+					- [Related presentations this week](#/presentations-this-week)
 
 					- Tom Wayson's blog: ["Loader of the Things: One Library to Load Them All"](http://tomwayson.com/2018/01/05/loader-of-the-things-one-library-to-load-them-all/)
 
