Stub in slide for sample 9

--- a/slides/index.html
+++ b/slides/index.html
@@ -376,7 +376,10 @@
 				<textarea data-template>
 					## 9-arcgis-api-service
 			
-					- Bullet [points here](http://hakim.se).
+					- Refactor sample 2 to move map creation to a service
+					- Create the map service
+					- Inject the service into `app.component`
+					- Replace the old `loadModules()` code with the new map service
 				</textarea>
 			</section>
 
